G1 crashes if active_processor_count changes during startup

XMLWordPrintable

    • gc
    • b131

        If os::active_processor_count changes during startup, G1 will crash because it sizes some data structures based on the first call, and then potentially accesses these data structures out of bounds.

        This bugfix is about fixing the G1 crash by introducing an initial_active_processor_count() call, but not reusing it for other purposes.

              Assignee:
              Thomas Schatzl
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: