8161993: G1 crashes if active_processor_count changes during startup

Use the initial active processor count for memory initialization instead of the current active one.

Reviewed-by: dholmes, mgerdin